# ref2

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/: funding.yml
.github/workflows/: ci.yml
c/format/: aligner.c  cluster.c  format.h  type_classifier.c
c/ingest/: ingest.h  ingest_common.c  pcap_reader.c  plaintext_reader.c  raw_reader.c  syscall_reader.c
c/token/: framing.c  length_field.c  token.h
paper/: Makefile  make_figs.py  ref2.bib  ref2.tex
scripts/: eval.py
src/: dissect.rs  ffi.rs  main.rs
src/grammar/: fsm.rs  ktails.rs  mod.rs  rpni.rs
src/output/: dot.rs  json_schema.rs  kaitai.rs  lua.rs  mod.rs  scapy.rs
tests/integration/: toy_protocol.rs
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
website/.docusaurus/docusaurus-plugin-content-docs/default/: site-docs-architecture-md-528.json  site-docs-cli-dissect-md-3a6.json  site-docs-cli-infer-md-ebc.json  site-docs-cli-view-md-cdc.json  site-docs-evaluation-metrics-md-441.json  site-docs-evaluation-protocols-md-8a7.json  site-docs-getting-started-installation-md-54f.json  site-docs-getting-started-quickstart-md-fbd.json  site-docs-internals-format-inference-md-e4b.json  site-docs-internals-grammar-induction-md-5f4.json  site-docs-internals-ingestion-md-5ae.json  site-docs-internals-output-formats-md-552.json  site-docs-internals-overview-md-e35.json  site-docs-internals-tokenization-md-aa7.json  site-docs-intro-md-0e3.json
website/.docusaurus/docusaurus-plugin-content-docs/default/p/: index-466.json
website/.docusaurus/docusaurus-plugin-debug/default/p/: docusaurus-debug-content-0d5.json
website/docs/: architecture.md  intro.md
website/docs/cli/: dissect.md  infer.md  view.md
website/docs/evaluation/: metrics.md  protocols.md
website/docs/getting-started/: installation.md  quickstart.md
website/docs/internals/: format-inference.md  grammar-induction.md  ingestion.md  output-formats.md  overview.md  tokenization.md
website/src/css/: custom.css
