[package]
name = "ref2"
version = "0.1.0"
edition = "2021"
description = "Automatic protocol grammar & message format inference"

[[bin]]
name = "ref2"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"

[dev-dependencies]
tempfile    = "3"

[[test]]
name = "toy_protocol"
path = "tests/integration/toy_protocol.rs"

[build-dependencies]
cmake = "0.1"

[profile.release]
lto = true
codegen-units = 1
